fix: change styles of button element for correct visibility.

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -52,9 +52,8 @@ button[type='button'] {
   appearance: none;
 }
 
-button[type='button'] {
+button {
   background: transparent;
-  cursor: pointer;
 }
 
 html,
@@ -284,6 +283,7 @@ header {
   background: #2639ed;
   border-radius: 60px;
   padding: 12.5px 20px;
+  cursor: pointer;
 
   transition: background-color 0.2s linear;
 }
